<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">預約通</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="t11">再按壹次退出程序</string>
    <string name="login_1">登入</string>
    <string name="login_2">忘記密碼</string>
    <string name="login_3">直接預約</string>
    <string name="second1">預約診所</string>
    <string name="second2">地區</string>
    <string name="second3">註冊專科</string>
    <string name="second4">預約日期</string>
    <string name="second5">下壹步</string>
    <string name="left1">馬上預約</string>
    <string name="left2">診所資料</string>
    <string name="left3">我的資料</string>
    <string name="left8">登出</string>
    <string name="left4">更改設置</string>
    <string name="left5">預約通間介</string>
    <string name="left6">提供建議</string>
    <string name="left7">—— —— —— —— —— —— ——</string>
    <string name="third1">選擇診所</string>
    <string name="Itext1">預約通連瑣醫務中心</string>
    <string name="Itext2">地址：將軍澳XXXXXXXXXXXXX</string>
    <string name="Itext3">陳大文醫生（應診時間：10:00-20:00) 當日預約人數5人</string>
    <string name="Itext4">陳大文醫生（應診時間：14:00-20:00) 當日預約人數3人</string>
    <string name="Itext5">註冊專科:兒科、普通科、牙科</string>
    <string name="Itext6">基本診金：HK$ 200</string>
    <string name="Itext7">電話：12345678</string>
    <string name="Itext8">陳大文醫生</string>
    <string name="Itext9">陳大文醫生可供預約時段</string>
    <string name="Itext10">預約時段:7月22日 14:00</string>
    <string name="Itext11">請輸入姓名</string>
    <string name="Itext12">請輸入電話</string>
    <string name="Itext13">請輸入詳細地址</string>
    <string name="Itext14">男</string>
    <string name="Itext15">女</string>
    <string name="Itext16">預約通連瑣醫務中心 7月22日 14:00-14:30</string>
    <string name="Itext17">心醫美務中心 7月22日 15:00-16:30</string>
    <string name="BItext1">預約通連瑣醫務中心</string>
    <string name="BItext2">地址：將軍澳XXXXXXXXXXXXX</string>
    <string name="BItext3">陳大文醫生</string>
    <string name="BItext4">7月22日</string>
    <string name="BItext5">14:00-14:30</string>
    <string name="BItext6">預約號碼</string>
    <string name="BItext7">18</string>
    <string name="BItext8">現在叫號</string>
    <string name="BItext9">15</string>
    <string name="BItext10">更新時間：12:30</string>
    <string name="BItext11">如已到診所，請與姑娘確認</string>
    <string name="inputRe">提交預約</string>
    <string name="inputRe1">預約確認</string>
    <string name="inputRe2">我的預約</string>
    <string name="inputRe3">妳的預約號碼</string>
    <string name="inputRe4">18</string>
    <string name="inputRe5">取消預約</string>
    <string name="i11">我的最愛</string>
    <string name="i12">我的預約</string>
    <string name="i121">廣告圖</string>
    <string name="i122">請選擇醫生或診所</string>
    <string name="i123">請選擇地區</string>
    <string name="i124">請選擇專利</string>
    <string name="i125">請選擇診金範圍</string>
    <string name="i1211">選擇預約時段</string>
    <string name="i126">登入</string>
    <string name="i127">立即註冊</string>
    <string name="i111">我的最愛</string>
    <string name="i112">切換使用者</string>
    <string name="i113">預約記錄</string>
    <string name="i114">設定</string>
    <string name="i115">朋友分享</string>
    <string name="i116">免責聲明</string>
    <string name="i117">提供建議</string>
    <string name="i118">0</string>
    <string name="i119">10</string>
    <string name="i121a">預約通連瑣醫務中心</string>
    <string name="i121b">預約通連瑣醫務中心a</string>
        <string name="i121c">預約通連瑣醫務中心b</string>
        <string name="i121d">預約通連瑣醫務中心b預約通連瑣醫務中心b</string>
        <string name="i122a">陳大輝</string>
    <string name="i123a">醫生名稱</string>
    <string name="i124a">候診人數</string>
    <string name="i125a">10</string>
    <string name="aa1">診所：ABC診所</string>
    <string name="aa2">醫生：陳大輝</string>
    <string name="aa3">地址：將軍澳XXXXXXXXXXX</string>
    <string name="aa4">電話：12345678</string>
    <string name="aa5">應診時間：00:00-21:00</string>
    <string name="aa6">基本診金：HK $200</string>
    <string name="aa7">病歷號碼：</string>
    <string name="aa8">需要收據：</string>
    <string name="aa9">需要醫生紙：</string>
    <string name="aa11">出示醫療卡：</string>
    <string name="aa12">現時叫號：20</string>
    <string name="aa13">即時預約</string>
    <string name="aa14">更新時間：09:30</string>
    <string name="aa15">下個派發號碼：30</string>
    <string name="aa16">今天8月13</string>
    <string name="aa17">8月14日</string>
    <string name="aa18">8月15日</string>
    <string name="Itext12a">請輸入身份證首4位數字</string>
    <string name="Itext12b">如有請輸入病歷號</string>
    <string name="Itext12c">確定</string>
    <string name="aa22">診所：</string>
    <string name="aa23">醫生：</string>
    <string name="aa24">電話：</string>
    <string name="aa25">即時預約號碼：</string>
    <string name="aa26">B4</string>
    <string name="aa27">我的預約</string>

</resources>