<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background1"
    android:layout_height="match_parent"
   android:orientation="vertical">

    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/b2"
        >
     <RelativeLayout 
         android:layout_width="50dp"
         android:id="@+id/mRlre1"
         android:layout_height="50dp"
         android:layout_centerVertical="true"
         >
         <ImageView 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/top_left"
            android:layout_centerInParent="true"
             />
     </RelativeLayout>
        <TextView 
            android:text="@string/inputRe2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            android:textSize="18sp"
            />
</RelativeLayout>

  <RelativeLayout 
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      >
         <Button 
            android:id="@+id/mBtNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:text="@string/inputRe5"
            android:gravity="center"
            android:layout_marginBottom="30dp"
            android:textSize="20sp"
            android:padding="5dp"
            android:textColor="@color/white"
            android:background="@drawable/button_next"
            />
         <ScrollView 
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_above="@id/mBtNext"
             >
             <LinearLayout 
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:orientation="vertical"
                 >
                         <TextView 
            android:text="@string/BItext1"
            android:layout_width="fill_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            />
                         <TextView 
            android:text="@string/BItext2"
            android:layout_width="fill_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:layout_marginTop="5dp"
            android:textSize="18sp"
            />
                                     <TextView 
            android:text="@string/BItext3"
            android:layout_width="fill_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            />
                                      <TextView 
            android:text="@string/BItext4"
            android:layout_width="fill_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:layout_marginTop="5dp"
            android:textSize="18sp"
            />
                                      <TextView 
            android:text="@string/BItext5"
            android:layout_width="fill_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:layout_marginTop="5dp"
            android:textSize="18sp"
            />
                                      <TextView 
            android:text="@string/BItext6"
            android:layout_width="fill_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            />
                                      <TextView 
            android:text="@string/BItext7"
            android:layout_width="fill_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            />
                                                   <TextView 
            android:text="@string/BItext8"
            android:layout_width="fill_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:layout_marginTop="5dp"
            android:textSize="18sp"
            />
                                                  <TextView 
            android:text="@string/BItext9"
            android:layout_width="fill_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            />
                                                    <TextView 
            android:text="@string/BItext10"
            android:layout_width="fill_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:layout_marginTop="10dp"
            android:textSize="11sp"
            />
                                                              <TextView 
            android:text="@string/BItext11"
            android:layout_width="fill_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:layout_marginTop="14dp"
            android:textSize="18sp"
            />
                                                    
             </LinearLayout>
             
         </ScrollView>
        
        
    
    </RelativeLayout>
    
    
</LinearLayout>
