<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background1"
    android:layout_height="match_parent"
  >

    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/b2"
        android:id="@+id/mRlcs1"
        >
     <RelativeLayout 
         android:layout_width="50dp"
         android:id="@+id/mRlre1"
         android:layout_height="50dp"
         android:layout_centerVertical="true"
         >
         <ImageView 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/top_left"
            android:layout_centerInParent="true"
             />
     </RelativeLayout>
        <TextView 
            android:text="@string/i1211"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            android:textSize="18sp"
            />
</RelativeLayout>
<RelativeLayout 
    android:layout_width="fill_parent"
    android:layout_height="65dp"
    android:id="@+id/mRLcs2"
    android:layout_alignParentBottom="true"
    android:background="@drawable/b13"
    
    >
            <TextView 
            android:text="@string/i121"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            android:textSize="18sp"
            />
    
</RelativeLayout>
<RelativeLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/mRlcs1"
    android:id="@+id/mRlcs4"
    >
    <LinearLayout 
        android:layout_width="fill_parent"
        android:id="@+id/mLLcs31"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <LinearLayout 
            android:layout_width="0dp"
            android:layout_weight="3"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            >
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aa1"
                android:textSize="12sp"
                android:textColor="@color/black"
                />
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aa2"
                android:textSize="12sp"
                android:layout_marginTop="2dp"
                android:textColor="@color/black"
                />
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aa3"
                android:textSize="12sp"
                android:layout_marginTop="2dp"
                android:textColor="@color/black"
                />
                        <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aa4"
                android:textSize="12sp"
                android:layout_marginTop="2dp"
                android:textColor="@color/black"
                />
                        <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aa5"
                android:textSize="12sp"
                android:layout_marginTop="2dp"
                android:textColor="@color/black"
                />
                           <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aa6"
                android:textSize="12sp"
                android:layout_marginTop="2dp"
                android:textColor="@color/black"
                />
                        
            </LinearLayout>
        <LinearLayout 
            android:layout_width="0dp"
            android:layout_weight="3"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="5dp"
            >
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView 
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/aa7"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                />
            <TextView 
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:background="@drawable/b22"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                />
            </LinearLayout>
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            >
            <TextView 
                android:layout_width="0dp"
                android:layout_weight="1.25"
                android:text="@string/aa8"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                />
            <ImageView 
                android:layout_width="0dp"
                                android:layout_gravity="center"
                
                android:layout_weight="0.5"
                android:src="@drawable/b21"
                android:layout_height="wrap_content"
                />
                        <View 
                android:layout_width="0dp"
                android:layout_weight="0.25"
                android:layout_height="1dp"
                />
            
            </LinearLayout>
                    <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            >
            <TextView 
                android:layout_width="0dp"
                android:layout_weight="1.25"
                android:text="@string/aa9"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                />
            <ImageView 
                android:layout_width="0dp"
                                android:layout_gravity="center"
                
                android:layout_weight="0.5"
                android:src="@drawable/b21"
                android:layout_height="wrap_content"
                />
                        <View 
                android:layout_width="0dp"
                android:layout_weight="0.25"
                android:layout_height="1dp"
                />
            
            </LinearLayout>
                    <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            >
            <TextView 
                android:layout_width="0dp"
                android:layout_weight="1.25"
                android:text="@string/aa11"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                />
            <ImageView 
                android:layout_width="0dp"
                                android:layout_gravity="center"
                
                android:layout_weight="0.5"
                android:src="@drawable/b21"
                android:layout_height="wrap_content"
                />
                        <View 
                android:layout_width="0dp"
                android:layout_weight="0.25"
                android:layout_height="1dp"
                />
            
            </LinearLayout>
        </LinearLayout>
        </LinearLayout>
        
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="75dp"
        android:background="@drawable/b14"
        android:layout_below="@id/mLLcs31"
        >
       <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="40dp"
       android:layout_centerVertical="true"
       android:id="@+id/mRlcs33"
        >
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="horizontal"
            >
              <RelativeLayout 
                    android:layout_width="0dp"
                android:layout_weight="1"
                
                android:layout_height="fill_parent"
                  >
            <TextView 
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/aa12"
                />
            </RelativeLayout>
               <RelativeLayout 
                    android:layout_width="0dp"
                android:layout_weight="1"
               
                android:layout_height="fill_parent"
                  >
            <Button 
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:gravity="center"
                                android:layout_centerInParent="true"
                android:id="@+id/mBtcs32"
                android:background="@drawable/b20"
                android:layout_height="wrap_content"
                android:text="@string/aa13"
                />
            </RelativeLayout>
                          <RelativeLayout 
                    android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="fill_parent"
                  >
            <TextView 
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content"
                android:text="@string/aa15"
                />
            </RelativeLayout>
               
        </LinearLayout>
        </RelativeLayout>
                           <TextView 
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/aa14"
                        android:layout_centerHorizontal="true"
                        android:textColor="@color/black"
                        android:layout_below="@id/mRlcs33"
                        android:gravity="center"
                        />
       
       
    </RelativeLayout>
</RelativeLayout>
    
       <android.support.v4.view.ViewPager
            android:id="@+id/vp1"
            android:layout_below="@id/mRlcs4"
            android:layout_width="fill_parent"
            android:layout_above="@id/mRLcs2"
            android:layout_height="fill_parent" />
                
    
</RelativeLayout>
