<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background1"
    android:layout_height="match_parent"
   android:orientation="vertical">

    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_top"
        >
     <RelativeLayout 
         android:layout_width="50dp"
         android:id="@+id/mRlre1"
         android:layout_height="50dp"
         android:layout_centerVertical="true"
         >
         <ImageView 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/top_left"
            android:layout_centerInParent="true"
             />
     </RelativeLayout>
        <TextView 
            android:text="@string/Itext1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            android:textSize="18sp"
            />
</RelativeLayout>

    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bgi1"
        android:layout_margin="1dp"
        >
        <ImageView 
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:id="@+id/mIvChoosedetail"
            android:src="@drawable/d1"
            />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_marginLeft="15dp"
            android:orientation="vertical"
            android:layout_height="wrap_content"
          android:layout_toRightOf="@id/mIvChoosedetail"
            >
                       <TextView 
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:text="@string/Itext2"
               android:textSize="15sp"
               android:id="@+id/mTvItext1"
               android:layout_marginTop="5dp"
               android:textColor="@color/black"
               />
                       <TextView 
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:text="@string/Itext5"
               android:textSize="15sp"
               android:layout_marginTop="5dp"
               android:textColor="@color/black"
               />
                                    <TextView 
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:text="@string/Itext6"
               android:textSize="15sp"
               android:layout_marginTop="5dp"
               android:textColor="@color/black"
               />
                                     <TextView 
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:text="@string/Itext7"
               android:textSize="15sp"
               android:layout_marginTop="5dp"
               android:textColor="@color/black"
               />
                                    
        </LinearLayout>
    </RelativeLayout>
    
    <ListView 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/mLvchosevadetail"
        ></ListView>
    
    
</LinearLayout>
