
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
 >
 <LinearLayout 
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:id="@+id/mLLf1a1"
     android:layout_marginTop="8dp"
     >
     <TextView 
         android:layout_width="0dp"
         android:layout_weight="1"
         android:text="@string/aa16"
         android:textSize="22sp"
         android:textColor="@color/black"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:gravity="center"
         />
     <TextView 
         android:layout_width="0dp"
         android:layout_weight="1"
         android:text="@string/aa17"
         android:textColor="@color/black"
                  android:textSize="22sp"
         
         android:layout_height="wrap_content"
         android:layout_gravity="center"
                  android:gravity="center"
         
         />
          <TextView 
         android:layout_width="0dp"
         android:layout_weight="1"
         android:text="@string/aa18"
         android:textColor="@color/black"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
                  android:gravity="center"
                  android:textSize="22sp"
         
         />
     
 </LinearLayout>
    <GridView 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/mLLf1a1"
        android:id="@+id/mGv11"
        android:verticalSpacing="14dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:horizontalSpacing="6dp"
        android:numColumns="3"
        ></GridView>
    
</RelativeLayout>
